--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +14,195 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* padding*/
+
+.p-1{
+  padding: 10px;
+}
+.p-2{
+  padding: 20px;
+}
+.p-3{
+  padding: 30px;
+}
+
+.pt-1{
+  padding-top: 10px;
+}
+.pt-2{
+  padding-top: 20px;
+}
+.pt-3{
+  padding-top: 30px;
+}
+.pb-1{
+  padding-bottom: 10px;
+}
+.pb-2{
+  padding-bottom: 20px;
+}
+.pb-3{
+  padding-bottom: 30px;
+}
+.pr-1{
+  padding-right: 10px;
+}
+.pr-2{
+  padding-right: 20px;
+}
+.pr-3{
+  padding-right: 30px;
+}
+.pl-1{
+  padding-left: 10px;
+}
+.pl-2{
+  padding-left: 20px;
+}
+.pl-3{
+  padding-left: 30px;
+}
+
+/* margin */
+
+.m-1{
+  margin: 10px;
+}
+
+.m-2{
+  margin: 20px;
+}
+.m-3{
+  margin: 30px;
+}
+.mt-1{
+  margin-top: 10px;
+}
+.mt-2{
+  margin-top: 20px;
+}
+.mt-3{
+  margin-top: 30px;
+}
+.mt-7{
+  margin-top: 70px;
+}
+
+.mb-1{
+  margin-bottom: 10px;
+}
+.mb-2{
+  margin-bottom: 20px;
+}
+
+.mb-3{
+  margin-bottom: 30px;
+}
+
+.mr-1{
+  margin-right: 10px;
+}
+.mr-2{
+  margin-right: 20px;
+}
+.mr-3{
+  margin-right: 30px;
+}
+.ml-1{
+  margin-left: 10px;
+}
+.ml-2{
+  margin-left: 20px;
+}
+.ml-3{
+  margin-left: 30px;
+}
+
+
+/* height */
+
+.h-7{
+  height: 70px;
+}
+
+/* width */
+.w-100per{
+  width: 100%;
+}
+
+/* tag */
+
+/* classes */
+
+.container{
+  width: 80%;
+  margin: 0 auto;
+}
+.header{
+  height: 70px;
+  width: 100%;
+  background-color: #D7D7D7;
+}
+
+.header-div{
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo{
+  width: 100%;
+  height: 100%;
+}
+.logo-div{
+  width: 100px;
+  height: 80%;
+  overflow: hidden;
+}
+.nav ul li {
+  list-style: none;
+}
+
+
+
+/* colors */
+.success{
+  color: #41C379;
+}
+/* background */
+
+/* flex */
+
+.d-flex{
+display: flex;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.align-item-center{
+  align-items: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.justify-around{
+  justify-content: space-around;
+}
+
+.direction-column{
+  flex-direction: column;
+}
+.direction-row{
+  flex-direction: row;
+}
+
+/* animation */
+
+/* hover */
+
